--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1,4 +1,5 @@
 main:
     - { url: '/', text: 'Blog' }
     - { url: '/grasses', text: 'Grasses' }
+    - { url: '/irrigation', text: 'Irrigation' }
     - { url: '/about', text: 'About' }
